# qcompendium

./: README.txt  qcompendium.cabal  qcompendium.txt
.github/workflows/: haskell.yml
app/: Main.hs
src/: Basis.hs  BasisStrict.hs  Example.hs  Measurement.hs  Operations.hs  Pairs.hs  Qcompendium.hs
src/Lazy/: Basis.hs
test/: BasisSpec.hs  BasisStrictSpec.hs  MeasurementSpec.hs  OperationsSpec.hs  PairsSpec.hs
test/Lazy/: BasisSpec.hs
