cabal-version:   3.6
name:            qcompendium
version:         0.1.0.0
synopsis:        First attempt to understand QC with Haskell 
author:          Λ
maintainer:      sobakavosne@gmail.com
category:        Math
build-type:      Simple
license:         MIT
license-file:    LICENSE
extra-doc-files:
  doc/Lecture_Notes_Programming_Quantum_Computers.pdf
  doc/Modeling_Quantum_Computing_in_Haskell.pdf
  doc/Quantum_Computing_as_a_High_School_Module.pdf
  README.txt

common shared-deps
  build-depends:
    , base
    , containers
    , hspec
    , hspec-discover
    , QuickCheck

  ghc-options:   -Wall

library
  import:           shared-deps
  exposed-modules:
    Basis
    BasisStrict
    Pairs

  hs-source-dirs:   src
  default-language: Haskell2010

executable qcompendium
  import:           shared-deps
  main-is:          Main.hs
  build-depends:    qcompendium
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite qcompendium-test
  import:           shared-deps
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    BasisSpec
    BasisStrictSpec
    PairsSpec

  build-depends:    qcompendium
